adds SmartInvs dependency

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       <version>1.16.5-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>fr.minuskube.inv</groupId>
+      <artifactId>smart-invs</artifactId>
+      <version>1.2.7</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
